# AI-Hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Memory.md  README.md  ROADMAP.md  ai-across-prd.md  docker-compose.dev.yml  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260120_000000_001_initial_schema.py  20260125_000000_002_add_usage_logs.py  20260204_000000_003_add_admin_features.py  20260210_000000_004_add_user_id_to_conversations.py  20260212_000000_005_add_ingestion_resilience.py  20260214_000000_006_add_message_feedback.py  20260215_000000_007_add_workspace_id.py  20260216_000000_008_add_rag_guardrails.py  20260219_120000_005_add_ingestion_resilience.py  20260219_121000_006_add_message_feedback.py  20260219_122000_007_add_workspace_id.py  20260219_123000_008_add_rag_guardrails.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: cache.py  config.py  encryption.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  api_key.py  assistant.py  audit_log.py  conversation.py  knowledge_file.py  message.py  settings.py  usage_log.py  usage_quota.py  user.py  user_api_key.py  workspace.py
backend/app/schemas/: __init__.py  admin.py  api_key.py  assistant.py  audit.py  conversation.py  file.py  quota.py  settings.py  user.py
backend/tests/: conftest.py  test_assistants.py  test_chunker.py  test_settings.py
(+143 files in other folders)
